--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,5 @@
     <string name="music">Activer la musique</string>
     <string name="soundEffects">Activer les bruitages</string>
     <string name="reset">Réinitialiser les niveaux</string>
-    <string name="hasBeenReset">Les niveaux ont été Réinitialisés</string>
+    <string name="hasBeenReset">Les niveaux ont été réinitialisés</string>
 </resources>
